--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.*",
         "gedmo/doctrine-extensions": "*",
-        "bitnoise/base-bundle": "dev-master"
+        "bitnoise/base-bundle": "dev-sf23"
     },
     "repositories": [
         {
