--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.*",
         "gedmo/doctrine-extensions": "*",
+        "symfony-cmf/routing-bundle": "*",
         "bitnoise/base-bundle": "dev-sf23"
     },
     "repositories": [
