--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,10 @@
 services:
+    btn.router:
+        class: Btn\NodesBundle\Router\Router
+        arguments: ["@service_container"]
+        tags:
+            - { name: router, priority: 0 }
+
     gedmo.listener.tree:
         class: Gedmo\Tree\TreeListener
         tags:
