--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url":  "git@github.com:Bitnoise/BtnBaseBundle.git"
+            "url":  "https://github.com/Bitnoise/BtnBaseBundle.git"
         }
     ],
     "autoload": {
