--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/symfony": "2.*",
         "gedmo/doctrine-extensions": "*",
         "symfony-cmf/routing-bundle": "*",
+        "knplabs/knp-menu-bundle":"dev-master",
         "bitnoise/base-bundle": "dev-sf23"
     },
     "repositories": [
