--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "gedmo/doctrine-extensions": "*",
         "symfony-cmf/routing-bundle": "*",
         "knplabs/knp-menu-bundle":"dev-master",
-        "bitnoise/base-bundle": "dev-sf23",
+        "bitnoise/base-bundle": "dev-sf23,dev-sf23-bs3",
         "bitnoise/media-bundle": "dev-master"
     },
     "repositories": [
