change bitnoise/media-bundle deps

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony-cmf/routing-bundle": "*",
         "knplabs/knp-menu-bundle":"dev-master",
         "bitnoise/base-bundle": "dev-sf23",
-        "bitnoise/media-bundle": "dev-master"
+        "bitnoise/media-bundle": "dev-sf23-bs3"
     },
     "repositories": [
         {
