--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,10 @@
         {
             "type": "vcs",
             "url":  "https://github.com/Bitnoise/BtnMediaBundle.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "https://github.com/Bitnoise/BtnBreadcrumbBundle.git"
         }
     ],
     "autoload": {
