--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony-cmf/routing-bundle": "*",
         "knplabs/knp-menu-bundle":"dev-master",
         "bitnoise/breadcrumb-bundle":"dev-master",
-        "bitnoise/base-bundle": "dev-sf23",
+        "bitnoise/base-bundle": "dev-sf23-bs3",
         "bitnoise/media-bundle": "dev-sf23-bs3"
     },
     "repositories": [
