fix btn_get_node twig function

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -41,6 +41,7 @@ services:
         class: Btn\NodesBundle\Twig\NodeMenuExtension
         arguments:
             nodeMenuProvider: @btn_menu.provider
+            em: @doctrine.orm.entity_manager
         tags:
             - { name: twig.extension }
 
